[FIX] fixed add button on small screens

--- a/src/app/admin/speciality/dialog-form/dialog-form.component.scss
+++ b/src/app/admin/speciality/dialog-form/dialog-form.component.scss
@@ -8,10 +8,6 @@ h3 {
   text-align: center;
 }
 
-mat-form-field {
-  width: 100%;
-}
-
 button {
   width: calc(50% - 10px);
   &:first-of-type {
